# GARD

./: .dockerignore  .gitignore  .gitmodules  Makefile  README.md  ROADMAP.md  pyproject.toml
.cursor/rules/: specify-rules.mdc
.github/workflows/: ci.yml  platform-lab-smoke.yml  web-ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: cursor-agent.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
adr/: ADR-0006-language-and-runtime.md  ADR-0007-database-and-migrations.md  ADR-0008-auth-and-rbac.md  ADR-0009-audit-and-evidence-storage.md  ADR-0010-normalization-rules-format.md  ADR-0011-catalog-yaml-schema-and-precedence.md  ADR-0012-lifecycle-state-unknown.md  ADR-0013-mcp-firmware-tools-deferred.md  ADR-0014-drift-taxonomy.md  ADR-0015-readiness-verdict-precedence.md  ADR-0016-wave-state-machine-and-sod.md  ADR-0017-netbox-integration-boundary.md  ADR-0018-netbox-diode-assurance-ecosystem.md  ADR-0019-mcp-transport-binding.md  ADR-0020-netbox-devicetype-bootstrap.md  ADR-0021-netbox-lifecycle-writeback.md  ADR-0022-operator-web-ui-boundary.md  ADR-0023-netbox-ipam-dcim-alignment.md  ADR-0024-netbox-platform-lab-boundary.md
deploy/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
deploy/netbox/: .env.example  Dockerfile.plugins  README.md  docker-compose.platform.yml  docker-compose.yml
deploy/nginx/: gard-ui.conf
deploy/scripts/: netbox-create-seed-token.sh  platform-lab-health.sh  platform-lab-ingest-smoke.sh  platform-lab-merge-demo.sh  platform-lab-start.sh  platform-lab-stop.sh  seed-isr1121.sh  seed-netbox.sh  seed.sh  sync-gard-netbox.sh
gard/: __main__.py  logging.py  settings.py  worker.py
gard-catalog/netbox/: alignment-policy-manifest.yaml  device-types-manifest.yaml  write-back-manifest.yaml
gard-catalog/normalization/: arista-eos.yaml  cisco-ios-isr1121.yaml  cisco-ios.yaml  cisco-iosxr.yaml  juniper-junos.yaml  nokia-sros.yaml
gard-catalog/schemas/: normalization-rule.schema.yaml
gard-speckit-start/: README.md
gard-speckit-start/adr/: ADR-0001-standalone-platform-with-netbox-integration.md  ADR-0002-governance-first-not-autonomous-upgrade.md  ADR-0003-mcp-native-from-v1.md  ADR-0004-lifecycle-as-code.md  ADR-0005-tr069-as-southbound-adapter.md
gard-speckit-start/context/: 00-product-brief.md  01-domain-assumptions.md
gard-speckit-start/examples/: devices.csv  firmware-targets.yaml  mcp-tools-draft.json  prerequisite-rules.yaml  sample-questions-for-agents.md  upgrade-paths.yaml
gard-speckit-start/specs/: 00-prd-gard.md  01-domain-model.md  02-lifecycle-state-machine.md  03-architecture.md  04-mvp-scope.md  05-netbox-tr069-positioning.md  06-mcp-server.md  07-risk-vulnerability.md  08-security-rbac-audit.md  09-api-surface.md  10-specification-work-prompts.md
gard/api/: app.py
gard/catalog/: firmware_loader.py  normalization_loader.py
gard/cli/: netbox_bootstrap.py  netbox_writeback_bootstrap.py
gard/core/: audit.py  catalog_editor.py  compliance_controller.py  compliance_evaluation_controller.py  csv_reader.py  device_controller.py  drift_rules.py  envelope.py  evidence.py  hashing.py  (+19 more)
netbox-platform-standalone/: .env.example  Dockerfile.plugins  README.md  docker-compose.orb-host.yml  docker-compose.yml
tests/: conftest.py
web/: components.json  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+436 files in other folders)
