[project]
name = "gard"
version = "0.1.0"
description = "Service Lifecycle Guardrails — MCP-native firmware lifecycle governance for CSP networks"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "GARD contributors" }]

dependencies = [
    "fastapi>=0.115,<0.116",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "psycopg[binary]>=3.2,<4",
    "mcp>=1.0,<2",
    "authlib>=1.3,<2",
    "python-jose[cryptography]>=3.3,<4",
    "structlog>=24.1,<25",
    "httpx>=0.27,<1",
    "uvicorn[standard]>=0.30,<0.40",
    "uuid7>=0.1,<1",  # provides the `uuid_extensions` module
    "pyyaml>=6.0,<7",
    "jsonschema>=4.22,<5",
    "python-multipart>=0.0.9,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<6",
    "freezegun>=1.5,<2",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
    "types-pyyaml",
    "types-python-jose",
]

[project.scripts]
gard = "gard.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gard"]

# ---- T003: linters & test config ----

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",       # pycodestyle / pyflakes
    "I",                 # isort
    "B",                 # bugbear
    "UP",                # pyupgrade
    "N",                 # pep8-naming
    "S",                 # bandit
    "RUF",               # ruff-specific
    "ASYNC",             # async issues
    "DTZ",               # datetime tz
    "PIE", "PT",         # misc
    "SIM",               # simplify
]
ignore = [
    "E501",  # line length handled by formatter
    "B008",  # FastAPI `Depends(...)` in default arg is idiomatic
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "S311", "PT011"]
"gard/db/migrations/**/*.py" = ["N999", "E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = []

[[tool.mypy.overrides]]
module = ["jose.*", "authlib.*", "uuid_extensions.*", "mcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "contract: contract tests against external/internal interfaces",
    "integration: end-to-end integration tests requiring Postgres",
    "unit: pure unit tests (no I/O)",
    "perf: performance probes (run with -m perf)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:passlib.*",
    "ignore::DeprecationWarning:jose.*",
    # psycopg + sqlalchemy + fastapi TestClient occasionally produces
    # late-finaliser ResourceWarnings under pytest's unraisableexception
    # plugin even when connections are explicitly disposed. Ignoring is
    # safe because production code uses context managers.
    "ignore::ResourceWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["gard"]
omit = ["gard/db/migrations/*", "gard/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 60
